--- a/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
@@ -20,7 +20,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRIN">
    <children>
             <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
@@ -62,6 +61,8 @@
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -72,8 +73,8 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <JFXButton onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.rowIndex="8" />
-                  <JFXButton contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.rowIndex="9">
+                  <JFXButton onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.rowIndex="10" />
+                  <JFXButton contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.rowIndex="11">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -92,12 +93,14 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Text>
-                  <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="3" />
-                  <ChoiceBox fx:id="languageSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="5" />
-                  <JFXTextField fx:id="serviceMessage" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="7" />
-                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select your location." textFill="WHITE" GridPane.rowIndex="2" />
-                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select a language." textFill="WHITE" GridPane.rowIndex="4" />
-                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Additional Comments" textFill="WHITE" GridPane.rowIndex="6" />
+                  <ChoiceBox fx:id="roomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="5" />
+                  <ChoiceBox fx:id="languageSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="7" />
+                  <JFXTextField fx:id="serviceMessage" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="9" />
+                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select your location." textFill="WHITE" GridPane.rowIndex="4" />
+                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select a language." textFill="WHITE" GridPane.rowIndex="6" />
+                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Additional Comments" textFill="WHITE" GridPane.rowIndex="8" />
+                  <Label style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Location Category" textFill="WHITE" GridPane.rowIndex="2" />
+                  <ChoiceBox fx:id="roomCategory" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="3" />
                </children>
                <BorderPane.margin>
                   <Insets left="20.0" right="20.0" />
