--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -21,6 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import net.kurobako.gesturefx.GesturePane?>
 <StackPane fx:id="parentPane" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFM">
     <children>
         <ImageView fx:id="backgroundImage" pickOnBounds="true">
@@ -35,64 +36,58 @@
                <children>
                       <JFXTabPane tabClosingPolicy="UNAVAILABLE">
                           <Tab text="Lower Level 2">
-                               <ScrollPane fx:id="lowerLevel2ScrollPane">
-                                   <AnchorPane fx:id="lowerLevel2AnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                       <ImageView fx:id="lowerLevel2ImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                           <Image url="@/maps/00_thelowerlevel2.png" />
-                                       </ImageView>
-                                   </AnchorPane>
-                               </ScrollPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/00_thelowerlevel2.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                           <Tab text="Lower Level 1">
-                              <ScrollPane fx:id="lowerLevel1ScrollPane">
-                                  <AnchorPane fx:id="lowerLevel1AnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                      <ImageView fx:id="lowerLevel1ImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                          <Image url="@../maps/00_thelowerlevel1.png" />
-                                      </ImageView>
-                                  </AnchorPane>
-                              </ScrollPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/00_thelowerlevel1.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                           <Tab text="Ground Floor">
-                                  <ScrollPane fx:id="groundFloorScrollPane">
-                                      <AnchorPane fx:id="groundFloorAnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                          <ImageView fx:id="groundFloorImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                              <Image url="@../maps/00_thegroundfloor.png" />
-                                          </ImageView>
-                                      </AnchorPane>
-                                  </ScrollPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/00_thegroundfloor.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                           <Tab text="First Floor">
-                              <StackPane>
-                                  <ScrollPane fx:id="firstFloorScrollPane">
-                                      <AnchorPane fx:id="firstFloorAnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                          <ImageView fx:id="firstFloorImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                              <Image url="@../maps/01_thefirstfloor.png" />
-                                          </ImageView>
-                                      </AnchorPane>
-                                  </ScrollPane>
-                              </StackPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/01_thefirstfloor.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                           <Tab text="Second Floor">
-                              <StackPane>
-                                  <ScrollPane fx:id="secondFloorScrollPane">
-                                      <AnchorPane fx:id="secondFloorAnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                          <ImageView fx:id="secondFloorImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                              <Image url="@../maps/02_thesecondfloor.png" />
-                                          </ImageView>
-                                      </AnchorPane>
-                                  </ScrollPane>
-                              </StackPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/02_thesecondfloor.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                           <Tab text="Third Floor">
-                              <StackPane>
-                                  <ScrollPane fx:id="thirdFloorScrollPane">
-                                      <AnchorPane fx:id="thirdFloorAnchorPane" maxHeight="3400.0" maxWidth="5000.0" minHeight="0.0" minWidth="1000.0" prefWidth="1920.0">
-                                          <ImageView fx:id="thirdFloorImageView" fitHeight="999" fitWidth="999" pickOnBounds="true" preserveRatio="true">
-                                              <Image url="@../maps/03_thethirdfloor.png" />
-                                          </ImageView>
-                                      </AnchorPane>
-                                  </ScrollPane>
-                              </StackPane>
+                              <GesturePane fitHeight="true" fitWidth="true" minScale="0.1" maxScale="9.0" prefWidth="1920.0">
+                                  <ImageView pickOnBounds="true" preserveRatio="true">
+                                      <image>
+                                          <Image url="@/maps/03_thethirdfloor.png" />
+                                      </image>
+                                  </ImageView>
+                              </GesturePane>
                           </Tab>
                       </JFXTabPane>
                          <AnchorPane translateX="10" translateY="35" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="50.0" StackPane.alignment="TOP_LEFT">
