--- a/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
@@ -24,7 +24,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRRS">
    <children>
           <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
@@ -55,11 +54,12 @@
             <GridPane>
                <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -68,8 +68,8 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                          <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.rowIndex="6" />
-                          <JFXButton contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.columnSpan="2" GridPane.rowIndex="7">
+                          <JFXButton fx:id="clearButton" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" GridPane.rowIndex="8" />
+                          <JFXButton contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" " GridPane.columnSpan="2" GridPane.rowIndex="9">
                               <graphic>
                                   <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                       <image>
@@ -88,23 +88,28 @@
                                   <Font name="System Bold" size="12.0" />
                               </font>
                           </Text>
-                          <ChoiceBox fx:id="roomSelect" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-                          <TextArea fx:id="serviceMessage" editable="false" prefHeight="220.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="5">
+                          <ChoiceBox fx:id="roomSelect" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                          <TextArea fx:id="serviceMessage" editable="false" prefHeight="220.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="7">
                               <padding>
                                   <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                               </padding>
                           </TextArea>
-                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" GridPane.columnSpan="2" GridPane.rowIndex="4">
                               <font>
                                   <Font name="System Bold" size="18.0" />
                               </font>
                           </Text>
-                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Request" GridPane.columnSpan="2" GridPane.rowIndex="4">
+                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Request" GridPane.columnSpan="2" GridPane.rowIndex="6">
                               <font>
                                   <Font name="System Bold" size="18.0" />
                               </font>
                           </Text>
-                          <JFXButton fx:id="confirmButton" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Location Category" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <ChoiceBox fx:id="roomCategory" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="3" />
                </children>
                <BorderPane.margin>
                   <Insets left="20.0" right="20.0" />
