--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -22,6 +22,7 @@
 <?import javafx.scene.text.Text?>
 
 <?import net.kurobako.gesturefx.GesturePane?>
+<?import javafx.scene.shape.Path?>
 <StackPane fx:id="parentPane" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFM">
     <children>
         <ImageView fx:id="backgroundImage" pickOnBounds="true">
@@ -36,57 +37,87 @@
                <children>
                       <JFXTabPane fx:id="mapTabPane" tabClosingPolicy="UNAVAILABLE">
                           <Tab text="Lower Level 2">
-                              <GesturePane fx:id="lowerLevel2GesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/00_thelowerlevel2.png" />
-                                      </image>
-                                  </ImageView>
-                              </GesturePane>
+                                  <GesturePane fx:id="lowerLevel2GesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
+                                      <AnchorPane>
+                                          <children>
+                                          <ImageView pickOnBounds="true" preserveRatio="true">
+                                              <image>
+                                                  <Image url="@/maps/00_thelowerlevel2.png" />
+                                              </image>
+                                          </ImageView>
+                                          <Path fx:id="pathLL2"/>
+                                          </children>
+                                      </AnchorPane>
+                                  </GesturePane>
                           </Tab>
                           <Tab text="Lower Level 1">
                               <GesturePane fx:id="lowerLevel1GesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/00_thelowerlevel1.png" />
-                                      </image>
-                                  </ImageView>
+                                  <AnchorPane>
+                                      <children>
+                                      <ImageView pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@/maps/00_thelowerlevel1.png" />
+                                          </image>
+                                      </ImageView>
+                                      <Path fx:id="pathLL1"/>
+                                      </children>
+                                  </AnchorPane>
                               </GesturePane>
                           </Tab>
                           <Tab text="Ground Floor">
                               <GesturePane fx:id="groundFloorGesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/00_thegroundfloor.png" />
-                                      </image>
-                                  </ImageView>
+                                  <AnchorPane>
+                                      <children>
+                                      <ImageView pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@/maps/00_thegroundfloor.png" />
+                                          </image>
+                                      </ImageView>
+                                      <Path fx:id="pathG"/>
+                                      </children>
+                                  </AnchorPane>
                               </GesturePane>
                           </Tab>
                           <Tab text="First Floor">
                               <GesturePane fx:id="firstFloorGesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/01_thefirstfloor.png" />
-                                      </image>
-                                  </ImageView>
+                                  <AnchorPane>
+                                      <children>
+                                      <ImageView pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@/maps/01_thefirstfloor.png" />
+                                          </image>
+                                      </ImageView>
+                                      <Path fx:id="path1"/>
+                                      </children>
+                                  </AnchorPane>
                               </GesturePane>
                           </Tab>
                           <Tab text="Second Floor">
                               <GesturePane fx:id="secondFloorGesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/02_thesecondfloor.png" />
-                                      </image>
-                                  </ImageView>
+                                  <AnchorPane>
+                                      <children>
+                                      <ImageView pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@/maps/02_thesecondfloor.png" />
+                                          </image>
+                                      </ImageView>
+                                      <Path fx:id="path2"/>
+                                      </children>
+                                  </AnchorPane>
                               </GesturePane>
                           </Tab>
                           <Tab text="Third Floor">
                               <GesturePane fx:id="thirdFloorGesturePane" fitHeight="false" fitWidth="false" prefWidth="1920.0">
-                                  <ImageView pickOnBounds="true" preserveRatio="true">
-                                      <image>
-                                          <Image url="@/maps/03_thethirdfloor.png" />
-                                      </image>
-                                  </ImageView>
+                                  <AnchorPane>
+                                      <children>
+                                      <ImageView pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@/maps/03_thethirdfloor.png" />
+                                          </image>
+                                      </ImageView>
+                                      <Path fx:id="path3"/>
+                                      </children>
+                                  </AnchorPane>
                               </GesturePane>
                           </Tab>
                       </JFXTabPane>
