--- a/BabySittingAPI/src/main/resources/service_request_babysitting.fxml
+++ b/BabySittingAPI/src/main/resources/service_request_babysitting.fxml
@@ -22,31 +22,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerSRB">
    <children>
-            <ImageView fx:id="backgroundImage" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@../images/Hospitalbackground.png" />
-                </image>
-            </ImageView>
             <BorderPane>
                 <top>
-                    <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
-                        <menus>
-                            <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="HOME" />
-                     </items>
-                  </Menu>
-                        </menus>
-                        <effect>
-                            <ColorAdjust>
-                                <input>
-                                    <DropShadow />
-                                </input>
-                            </ColorAdjust>
-                        </effect>
-                    </MenuBar>
                 </top>
          <left>
             <GridPane>
@@ -117,7 +96,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/feeder1.png" />
+                                    <Image url="@/Babysitting/feeder1.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="feeder" layoutX="50.0" layoutY="161.0" mnemonicParsing="false" text="Feeder" textFill="#015080" />
@@ -127,7 +106,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/diaper.png" />
+                                    <Image url="@/Babysitting/diaper.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="diaper" layoutX="18.0" layoutY="160.0" mnemonicParsing="false" text="Change diapers" textFill="#015080" />
@@ -137,7 +116,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/bath.png" />
+                                    <Image url="@/Babysitting/bath.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="bath" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Bath" textFill="#015080" />
@@ -151,7 +130,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/rocking-horse.png" />
+                                    <Image url="@/Babysitting/rocking-horse.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="toy" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Toys" textFill="#015080" />
@@ -161,7 +140,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="31.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/baby-stroller.png" />
+                                    <Image url="@/Babysitting/baby-stroller.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="babyStroller" layoutX="26.0" layoutY="161.0" mnemonicParsing="false" text="Baby Stroller" textFill="#015080" />
@@ -171,7 +150,7 @@
                            <children>
                               <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/Babysitting/cutlery.png" />
+                                    <Image url="@/Babysitting/cutlery.png" />
                                  </image>
                               </ImageView>
                               <CheckBox fx:id="food" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Food" textFill="#015080" />
